feat(sqlite持久化)： - 使用sqlite持久化进程聚焦信息 - 提供进程时间表的CRUD接口 - 增加swagger文档

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: aigf
   datasource:
-    url: jdbc:sqlite:data/monitor.db
+    url: jdbc:sqlite:C:/Users/Administrator/.myapp/monitor.db
     driver-class-name: org.sqlite.JDBC
 
 mybatis-plus:
